solved avatar pic squishing issue

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 .container {
     width: 88%;
-    max-width: 370px;
+    max-width: 350px;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
@@ -75,6 +75,7 @@ strong {
 }
 .avatar-img {
     width: 40px;
+    min-width: 40px;
     border-radius: 50%;
 }
 .f2 {
@@ -109,5 +110,76 @@ strong {
     border: 1px solid white;
 }
 
+@media (min-width: 400px) {
+    html {
+        font-size: 1.05rem;
+    }
+    .heading {
+        line-height: 25px;
+    }
+    .text {
+        line-height: 21px;
+    }
 
+}
+@media (min-width: 600px) {
+    .container {
+        display: flex;
+        justify-content: space-between;
+        max-width: 950px;
+    }
+    .header {
+        width: 45%;
+    }
+    .body2 {
+        width: 55%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .header-img {
+        height: 100%;
+        object-fit: cover;
+    }
+    .heading {
+        font-size: 1.1rem;
+    }
+    .text {
+        font-size: 0.87rem;
+    }
+    .share {
+        margin-left: 0.7em;
+    }
+    .f2 {
+        display: block;
+    }
+    .footer2 {
+        position: absolute;
+        border-radius: 20px;
+        top: 54%;
+        right: 2%;
+    }
+    .item3 {
+        width: 40%;
+    }
+    #toggle-btn2 {
+        position: absolute;
+        top: 79px;
+        right: 53px;
+    }
+  
+}
+@media (min-width: 1000px) {
+    html {
+        font-size: 1.25rem;
+    }
+    .text {
+        word-spacing: 2px;
+        line-height: 25px;
+    }
+    .heading {
+        font-size: 1.3rem;
+        line-height: 35px;
+    }
 
+}
